sintactico/sintactico2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ciclofor
Rule 1     ciclofor -> FOR PABIERTO inicializacion PUNTOCOMA condicion PUNTOCOMA incremento PCERRADO cuerpo
Rule 2     inicializacion -> INT I IGUAL NUMERO
Rule 3     condicion -> I MENORIGUAL NUMERO
Rule 4     incremento -> I INCREMENTO
Rule 5     cuerpo -> LABIERTO sentencia LCERRADO
Rule 6     sentencia -> SYSTEM PUNTO OUT PUNTO PRINTLN PABIERTO cadena CONCATENACION I PCERRADO PUNTOCOMA
Rule 7     cadena -> CADENA

Terminals, with rules where they appear

CADENA               : 7
CONCATENACION        : 6
FOR                  : 1
I                    : 2 3 4 6
IGUAL                : 2
INCREMENTO           : 4
INT                  : 2
LABIERTO             : 5
LCERRADO             : 5
MENORIGUAL           : 3
NUMERO               : 2 3
OUT                  : 6
PABIERTO             : 1 6
PCERRADO             : 1 6
PRINTLN              : 6
PUNTO                : 6 6
PUNTOCOMA            : 1 1 6
SYSTEM               : 6
error                : 

Nonterminals, with rules where they appear

cadena               : 6
ciclofor             : 0
condicion            : 1
cuerpo               : 1
incremento           : 1
inicializacion       : 1
sentencia            : 5

Parsing method: LALR

state 0

    (0) S' -> . ciclofor
    (1) ciclofor -> . FOR PABIERTO inicializacion PUNTOCOMA condicion PUNTOCOMA incremento PCERRADO cuerpo

    FOR             shift and go to state 2

    ciclofor                       shift and go to state 1

state 1

    (0) S' -> ciclofor .



state 2

    (1) ciclofor -> FOR . PABIERTO inicializacion PUNTOCOMA condicion PUNTOCOMA incremento PCERRADO cuerpo

    PABIERTO        shift and go to state 3


state 3

    (1) ciclofor -> FOR PABIERTO . inicializacion PUNTOCOMA condicion PUNTOCOMA incremento PCERRADO cuerpo
    (2) inicializacion -> . INT I IGUAL NUMERO

    INT             shift and go to state 5

    inicializacion                 shift and go to state 4

state 4

    (1) ciclofor -> FOR PABIERTO inicializacion . PUNTOCOMA condicion PUNTOCOMA incremento PCERRADO cuerpo

    PUNTOCOMA       shift and go to state 6


state 5

    (2) inicializacion -> INT . I IGUAL NUMERO

    I               shift and go to state 7


state 6

    (1) ciclofor -> FOR PABIERTO inicializacion PUNTOCOMA . condicion PUNTOCOMA incremento PCERRADO cuerpo
    (3) condicion -> . I MENORIGUAL NUMERO

    I               shift and go to state 9

    condicion                      shift and go to state 8

state 7

    (2) inicializacion -> INT I . IGUAL NUMERO

    IGUAL           shift and go to state 10


state 8

    (1) ciclofor -> FOR PABIERTO inicializacion PUNTOCOMA condicion . PUNTOCOMA incremento PCERRADO cuerpo

    PUNTOCOMA       shift and go to state 11


state 9

    (3) condicion -> I . MENORIGUAL NUMERO

    MENORIGUAL      shift and go to state 12


state 10

    (2) inicializacion -> INT I IGUAL . NUMERO

    NUMERO          shift and go to state 13


state 11

    (1) ciclofor -> FOR PABIERTO inicializacion PUNTOCOMA condicion PUNTOCOMA . incremento PCERRADO cuerpo
    (4) incremento -> . I INCREMENTO

    I               shift and go to state 15

    incremento                     shift and go to state 14

state 12

    (3) condicion -> I MENORIGUAL . NUMERO

    NUMERO          shift and go to state 16


state 13

    (2) inicializacion -> INT I IGUAL NUMERO .

    PUNTOCOMA       reduce using rule 2 (inicializacion -> INT I IGUAL NUMERO .)


state 14

    (1) ciclofor -> FOR PABIERTO inicializacion PUNTOCOMA condicion PUNTOCOMA incremento . PCERRADO cuerpo

    PCERRADO        shift and go to state 17


state 15

    (4) incremento -> I . INCREMENTO

    INCREMENTO      shift and go to state 18


state 16

    (3) condicion -> I MENORIGUAL NUMERO .

    PUNTOCOMA       reduce using rule 3 (condicion -> I MENORIGUAL NUMERO .)


state 17

    (1) ciclofor -> FOR PABIERTO inicializacion PUNTOCOMA condicion PUNTOCOMA incremento PCERRADO . cuerpo
    (5) cuerpo -> . LABIERTO sentencia LCERRADO

    LABIERTO        shift and go to state 20

    cuerpo                         shift and go to state 19

state 18

    (4) incremento -> I INCREMENTO .

    PCERRADO        reduce using rule 4 (incremento -> I INCREMENTO .)


state 19

    (1) ciclofor -> FOR PABIERTO inicializacion PUNTOCOMA condicion PUNTOCOMA incremento PCERRADO cuerpo .

    $end            reduce using rule 1 (ciclofor -> FOR PABIERTO inicializacion PUNTOCOMA condicion PUNTOCOMA incremento PCERRADO cuerpo .)


state 20

    (5) cuerpo -> LABIERTO . sentencia LCERRADO
    (6) sentencia -> . SYSTEM PUNTO OUT PUNTO PRINTLN PABIERTO cadena CONCATENACION I PCERRADO PUNTOCOMA

    SYSTEM          shift and go to state 22

    sentencia                      shift and go to state 21

state 21

    (5) cuerpo -> LABIERTO sentencia . LCERRADO

    LCERRADO        shift and go to state 23


state 22

    (6) sentencia -> SYSTEM . PUNTO OUT PUNTO PRINTLN PABIERTO cadena CONCATENACION I PCERRADO PUNTOCOMA

    PUNTO           shift and go to state 24


state 23

    (5) cuerpo -> LABIERTO sentencia LCERRADO .

    $end            reduce using rule 5 (cuerpo -> LABIERTO sentencia LCERRADO .)


state 24

    (6) sentencia -> SYSTEM PUNTO . OUT PUNTO PRINTLN PABIERTO cadena CONCATENACION I PCERRADO PUNTOCOMA

    OUT             shift and go to state 25


state 25

    (6) sentencia -> SYSTEM PUNTO OUT . PUNTO PRINTLN PABIERTO cadena CONCATENACION I PCERRADO PUNTOCOMA

    PUNTO           shift and go to state 26


state 26

    (6) sentencia -> SYSTEM PUNTO OUT PUNTO . PRINTLN PABIERTO cadena CONCATENACION I PCERRADO PUNTOCOMA

    PRINTLN         shift and go to state 27


state 27

    (6) sentencia -> SYSTEM PUNTO OUT PUNTO PRINTLN . PABIERTO cadena CONCATENACION I PCERRADO PUNTOCOMA

    PABIERTO        shift and go to state 28


state 28

    (6) sentencia -> SYSTEM PUNTO OUT PUNTO PRINTLN PABIERTO . cadena CONCATENACION I PCERRADO PUNTOCOMA
    (7) cadena -> . CADENA

    CADENA          shift and go to state 30

    cadena                         shift and go to state 29

state 29

    (6) sentencia -> SYSTEM PUNTO OUT PUNTO PRINTLN PABIERTO cadena . CONCATENACION I PCERRADO PUNTOCOMA

    CONCATENACION   shift and go to state 31


state 30

    (7) cadena -> CADENA .

    CONCATENACION   reduce using rule 7 (cadena -> CADENA .)


state 31

    (6) sentencia -> SYSTEM PUNTO OUT PUNTO PRINTLN PABIERTO cadena CONCATENACION . I PCERRADO PUNTOCOMA

    I               shift and go to state 32


state 32

    (6) sentencia -> SYSTEM PUNTO OUT PUNTO PRINTLN PABIERTO cadena CONCATENACION I . PCERRADO PUNTOCOMA

    PCERRADO        shift and go to state 33


state 33

    (6) sentencia -> SYSTEM PUNTO OUT PUNTO PRINTLN PABIERTO cadena CONCATENACION I PCERRADO . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34


state 34

    (6) sentencia -> SYSTEM PUNTO OUT PUNTO PRINTLN PABIERTO cadena CONCATENACION I PCERRADO PUNTOCOMA .

    LCERRADO        reduce using rule 6 (sentencia -> SYSTEM PUNTO OUT PUNTO PRINTLN PABIERTO cadena CONCATENACION I PCERRADO PUNTOCOMA .)

